--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ header h1 {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 400px;
-    min-height: 400px;
     height: auto;
 }
 
@@ -66,7 +65,7 @@ header h1 {
 }
 
 #posts-list {
-    height: calc(100% - 50px);
+    max-height: 50px;
     overflow-y: auto;
 }
 
@@ -77,6 +76,7 @@ button[type="submit"] {
     padding: 6px 6px;
     color: white;
     background-color: rgb(78, 136, 251);
+    cursor: pointer;
 }
 
 button[type="submit"]:hover {
