--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ header h1 {
 
 .form-group textarea {
     width: calc(100% - 22px);
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
     resize: vertical;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -78,7 +80,7 @@ header h1 {
 }
 
 #posts-list {
-    max-height: 100px;
+    height: 300px;
     overflow-y: auto;
 }
 .post-item {
@@ -91,6 +93,7 @@ header h1 {
 .h4-title {
     text-align: center;
     border-bottom: solid black 1px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .p-content {
@@ -98,6 +101,55 @@ header h1 {
     border-radius: 3px;
     border: none;
     margin-top: 2px;
+    margin-bottom: 10px;
+    padding: 4px;
+    font-family: 'Times New Roman', Times, serif;
+    overflow-wrap: break-word;
+}
+
+.edit-title-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+}
+
+.edit-content-textarea {
+    width: 100%;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    resize: vertical;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+    min-height: 200px;    
+}
+
+.edit-btn {
+    width: 100px;
+    border: none;
+    border-radius: 4px;
+    padding: 6px 6px;
+    color: white;
+    background-color: rgb(78, 136, 251);
+    cursor: pointer;
+}
+
+.edit-btn:hover {
+    background-color: rgb(48, 166, 64);
+}
+
+.delete-btn {
+    width: 100px;
+    border: none;
+    border-radius: 4px;
+    padding: 6px 6px;
+    color: white;
+    background-color: rgb(251, 78, 78);
+    cursor: pointer;
+    float: right;
 }
 
 button[type="submit"] {
